results/SpecGenBench/4-shot/log-MinInArray-2023_11_28_00_08_44.txt
class MinInArray {
    //@ requires arr != null;
    //@ ensures \result >= Integer.MIN_VALUE && \result <= Integer.MAX_VALUE;
    //@ ensures (\forall int i; 0 <= i && i < arr.length; arr[i] >= \result);
    //@ ensures \result == -1 ==> arr.length == 0;
    public int minElementInArray(int[] arr) {
        if (arr.length == 0) return -1;
        int res = Integer.MIN_VALUE;
        //@ maintaining (\forall int i; 0 <= i && i < a.length; a[i] >= res);
        //@ decreases arr.length - i;
        for(int i = 0; i < arr.length; i++) {
            res = ((arr[i] < res) ? arr[i] : res);
        }
        return res;
    }
}
/home/max/Documents/JMLGPT/tmp/MinInArray.java:9: error: variable i is already defined in method minElementInArray(int[])
        //@ maintaining (\forall int i; 0 <= i && i < a.length; a[i] >= res);
                                     ^
/home/max/Documents/JMLGPT/tmp/MinInArray.java:9: error: cannot find symbol
        //@ maintaining (\forall int i; 0 <= i && i < a.length; a[i] >= res);
                                                      ^
  symbol:   variable a
  location: class MinInArray
/home/max/Documents/JMLGPT/tmp/MinInArray.java:9: error: cannot find symbol
        //@ maintaining (\forall int i; 0 <= i && i < a.length; a[i] >= res);
                                                                ^
  symbol:   variable a
  location: class MinInArray
3 errors

